--- a/src/app/modules/users/components/edit-user-modal/edit-user-modal.component.html
+++ b/src/app/modules/users/components/edit-user-modal/edit-user-modal.component.html
@@ -1,1 +1,386 @@
-<p>edit-user-modal works!</p>
+<div class="modal-content">
+    <div class="modal-header">
+      <div class="modal-title h4" id="example-modal-sizes-title-lg">
+        <ng-container >
+         <!-- <ng-container *ngIf="customer.id">Edit</ng-container> -->
+          <ng-container >Create</ng-container>
+          customer
+          <ng-container 
+            >customer.firstName customer.lastName </ng-container
+          >
+        </ng-container>
+      </div>
+    </div>
+    <div
+      class="overlay overlay-block cursor-default modal-body"
+      style="min-height: 404px"
+    >
+      <ng-container *ngIf="isLoading$ | async">
+        <div class="overlay-layer bg-transparent">
+          <div class="spinner spinner-lg spinner-success"></div>
+        </div>
+      </ng-container>
+  
+      <ng-container >
+        <form action="#" class="form form-label-right">
+          <div class="form-group row">
+
+                <div class="col-lg-4">
+                  <label>Select People</label>
+                  <select
+                    class="form-control form-control-lg form-control-solid"
+                    name="people"
+                    [class.is-invalid]="isControlInvalid('people')"
+                    formControlName="people"
+                  >
+                    <option value="TPJ">Persona Juridica</option>
+                    <option value="TPN">Persona Natural</option>
+                    <option value="SND">Sujeto No Domiciliario</option>
+                    <option value="AT">Adquiriente - Ticket</option>
+                  </select>
+                 <!--<div class="feedback">Please select <b>Gender</b></div>-->
+                </div>
+
+            <div class="col-lg-4">
+              <label class="form-label">Enter First name</label>
+              <input
+                type="text"
+                class="form-control form-control-lg form-control-solid"
+                name="firstName"
+                placeholder="First Name"
+                autocomplete="off"
+                [class.is-invalid]="isControlInvalid('firstName')"
+                [class.is-valid]="isControlValid('firstName')"
+                formControlName="firstName"
+              />
+              <div class="valid-feedback" *ngIf="isControlValid('firstName')">
+                First name was entered correct
+              </div>
+              <div
+                class="invalid-feedback"
+                *ngIf="controlHasError('required', 'firstName')"
+              >
+                First name is required
+              </div>
+              <div
+                class="invalid-feedback"
+                *ngIf="controlHasError('minlength', 'firstName')"
+              >
+                First name should have at least 3 symbols
+              </div>
+              <div
+                class="invalid-feedback"
+                *ngIf="controlHasError('maxlength', 'firstName')"
+              >
+                First name should have maximum 100 symbols
+              </div>
+            </div>
+
+            <div class="col-lg-4">
+              <label class="form-label">Enter Last name</label>
+              <input
+                type="text"
+                class="form-control form-control-lg form-control-solid is-invalid"
+                name="lastName"
+                placeholder="Last Name"
+                autocomplete="off"
+                [class.is-invalid]="isControlInvalid('lastName')"
+                [class.is-valid]="isControlValid('lastName')"
+                formControlName="lastName"
+              />
+              <div class="valid-feedback" *ngIf="isControlValid('lastName')">
+                Last name was entered correct
+              </div>
+              <div
+                class="invalid-feedback"
+                *ngIf="controlHasError('required', 'lastName')"
+              >
+                Last name is required
+              </div>
+              <div
+                class="invalid-feedback"
+                *ngIf="controlHasError('minlength', 'lastName')"
+              >
+                Last name should have at least 3 symbols
+              </div>
+              <div
+                class="invalid-feedback"
+                *ngIf="controlHasError('maxLength', 'lastName')"
+              >
+                Last name should have maximum 100 symbols
+              </div>
+            </div>
+
+            <div class="col-lg-4">
+                <label class="form-label">Enter First Apellido</label>
+                <input
+                  type="text"
+                  class="form-control form-control-lg form-control-solid"
+                  name="firstName"
+                  placeholder="First Name"
+                  autocomplete="off"
+                  [class.is-invalid]="isControlInvalid('firstName')"
+                  [class.is-valid]="isControlValid('firstName')"
+                  formControlName="firstName"
+                />
+                <div class="valid-feedback" *ngIf="isControlValid('firstName')">
+                  First name was entered correct
+                </div>
+                <div
+                  class="invalid-feedback"
+                  *ngIf="controlHasError('required', 'firstName')"
+                >
+                  First name is required
+                </div>
+                <div
+                  class="invalid-feedback"
+                  *ngIf="controlHasError('minlength', 'firstName')"
+                >
+                  First name should have at least 3 symbols
+                </div>
+                <div
+                  class="invalid-feedback"
+                  *ngIf="controlHasError('maxlength', 'firstName')"
+                >
+                  First name should have maximum 100 symbols
+                </div>
+              </div>
+  
+              <div class="col-lg-4">
+                <label class="form-label">Enter Last Apellido</label>
+                <input
+                  type="text"
+                  class="form-control form-control-lg form-control-solid is-invalid"
+                  name="lastName"
+                  placeholder="Last Name"
+                  autocomplete="off"
+                  [class.is-invalid]="isControlInvalid('lastName')"
+                  [class.is-valid]="isControlValid('lastName')"
+                  formControlName="lastName"
+                />
+                <div class="valid-feedback" *ngIf="isControlValid('lastName')">
+                  Last name was entered correct
+                </div>
+                <div
+                  class="invalid-feedback"
+                  *ngIf="controlHasError('required', 'lastName')"
+                >
+                  Last name is required
+                </div>
+                <div
+                  class="invalid-feedback"
+                  *ngIf="controlHasError('minlength', 'lastName')"
+                >
+                  Last name should have at least 3 symbols
+                </div>
+                <div
+                  class="invalid-feedback"
+                  *ngIf="controlHasError('maxLength', 'lastName')"
+                >
+                  Last name should have maximum 100 symbols
+                </div>
+              </div>
+
+              <div class="col-lg-4">
+                <label class="form-label">Enter Razon Social</label>
+                <input
+                  type="text"
+                  class="form-control form-control-lg form-control-solid is-invalid"
+                  name="lastName"
+                  placeholder="Last Name"
+                  autocomplete="off"
+                  [class.is-invalid]="isControlInvalid('lastName')"
+                  [class.is-valid]="isControlValid('lastName')"
+                  formControlName="lastName"
+                />
+                <div class="valid-feedback" *ngIf="isControlValid('lastName')">
+                  Last name was entered correct
+                </div>
+                <div
+                  class="invalid-feedback"
+                  *ngIf="controlHasError('required', 'lastName')"
+                >
+                  Last name is required
+                </div>
+                <div
+                  class="invalid-feedback"
+                  *ngIf="controlHasError('minlength', 'lastName')"
+                >
+                  Last name should have at least 3 symbols
+                </div>
+                <div
+                  class="invalid-feedback"
+                  *ngIf="controlHasError('maxLength', 'lastName')"
+                >
+                  Last name should have maximum 100 symbols
+                </div>
+              </div>
+            
+          </div>
+
+          <div class="form-group row">
+
+            <div class="col-lg-4">
+                <label>Select Tipo Documento</label>
+                <select
+                  class="form-control form-control-lg form-control-solid"
+                  name="people"
+                  [class.is-invalid]="isControlInvalid('people')"
+                  formControlName="people"
+                >
+                  <option value="0">Otros Tipos de Documento</option>
+                  <option value="1">Documento Nacional de Identidad</option>
+                  <option value="4">Carnet Extranjeria</option>
+                  <option value="6">Registro Unico de Contribuyentes</option>
+                  <option value="7">Pasaporte</option>
+                </select>
+               <!--<div class="feedback">Please select <b>Gender</b></div>-->
+              </div>
+
+              <div class="col-lg-4">
+              <label class="form-label">Enter Numero de Identidad</label>
+              <input
+                type="text"
+                class="form-control form-control-lg form-control-solid"
+                name="ipAddress"
+                placeholder="70213603"
+                autocomplete="off"
+                [class.is-invalid]="isControlInvalid('ipAddress')"
+                [class.is-valid]="isControlValid('ipAddress')"
+                formControlName="ipAddress"
+              />
+              <div class="valid-feedback" *ngIf="isControlValid('ipAddress')">
+                Login was entered correct
+              </div>
+            </div>
+
+            <div class="col-lg-4">
+              <label class="form-label">Enter Email</label>
+              <input
+                type="email"
+                class="form-control form-control-lg form-control-solid"
+                name="email"
+                placeholder="Email"
+                autocomplete="off"
+                [class.is-invalid]="isControlInvalid('email')"
+                [class.is-valid]="isControlValid('email')"
+                formControlName="email"
+              />
+              <div class="valid-feedback" *ngIf="isControlValid('email')">
+                Email was entered correct
+              </div>
+              <div
+                class="invalid-feedback"
+                *ngIf="controlHasError('required', 'email')"
+              >
+                Email is required
+              </div>
+              <div
+                class="invalid-feedback"
+                *ngIf="controlHasError('email', 'email')"
+              >
+                Email format is incorrect
+              </div>
+            </div>
+
+            <div class="col-lg-4">
+              <label>Date of Birth</label>
+              <div class="input-group input-group-solid">
+                <input
+                  type="text"
+                  name="dob"
+                  class="form-control form-control-lg form-control-solid"
+                  autocomplete="off"
+                  placeholder="dd/mm/yyyy"
+                  ngbDatepicker
+                  #d="ngbDatepicker"
+                  [class.is-invalid]="isControlInvalid('dob')"
+                  [class.is-valid]="isControlValid('dob')"
+                  formControlName="dob"
+                  readonly="true"
+                />
+                <div class="input-group-append" (click)="d.toggle()">
+                  <span class="input-group-text">
+                    <i class="text-dark-50 flaticon-calendar"></i>
+                  </span>
+                </div>
+              </div>
+              <div class="valid-feedback" *ngIf="isControlValid('dob')">
+                Date of Birth was entered correct
+              </div>
+              <div
+                class="invalid-feedback"
+                *ngIf="controlHasError('required', 'dob')"
+              >
+                Please enter <b>Date of Birth</b> in 'mm/dd/yyyy' format
+              </div>
+            </div>
+
+            <div class="col-lg-4">
+              <label class="form-label">Enter IP Address</label>
+              <input
+                type="text"
+                class="form-control form-control-lg form-control-solid"
+                name="ipAddress"
+                placeholder="255.255.255.0"
+                autocomplete="off"
+                [class.is-invalid]="isControlInvalid('ipAddress')"
+                [class.is-valid]="isControlValid('ipAddress')"
+                formControlName="ipAddress"
+              />
+              <div class="valid-feedback" *ngIf="isControlValid('ipAddress')">
+                Login was entered correct
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <div class="col-lg-4">
+              <label>Select Gender</label>
+              <select
+                class="form-control form-control-lg form-control-solid"
+                name="gender"
+                [class.is-invalid]="isControlInvalid('gender')"
+                formControlName="gender"
+              >
+                <option value="Female">Female</option>
+                <option value="Male">Male</option>
+              </select>
+              <div class="feedback">Please select <b>Gender</b></div>
+            </div>
+            
+            <div class="col-lg-4">
+              <label>Select Type</label>
+              <select
+                class="form-control form-control-lg form-control-solid"
+                name="type"
+                formControlName="type"
+              >
+                <option value="1">Business</option>
+                <option value="2">Individual</option>
+              </select>
+              <div class="feedback">Please select <b>Type</b></div>
+            </div>
+          </div>
+        </form>
+      </ng-container>
+    </div>
+    <div class="modal-footer">
+      <button
+        type="button"
+        class="btn btn-light btn-elevate mr-2"
+      >
+        Cancel
+      </button>
+      <ng-container>
+        <button
+          type="submit"
+          class="btn btn-primary btn-elevate"
+          [disabled]="formGroup.invalid"
+        >
+          Save
+        </button>
+      </ng-container>
+    </div>
+  </div>
+  
