--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -1443,6 +1443,57 @@
           </ul>
         </div>
       </li>
+
+      <li
+        class="menu-item menu-item-submenu"
+        aria-haspopup="true"
+        data-menu-toggle="hover"
+        routerLinkActive="menu-item-open"
+      >
+        <a
+          class="menu-link menu-toggle"
+          routerLinkActive="active"
+          href="/users"
+        >
+          <span
+            [inlineSVG]="'./assets/media/svg/icons/General/User.svg'"
+            cacheSVG="true"
+            class="svg-icon menu-icon"
+          ></span>
+          <span class="menu-text">Payments</span>
+          <i class="menu-arrow"></i>
+        </a>
+        <div class="menu-submenu">
+          <i class="menu-arrow"></i>
+          <ul class="menu-subnav">
+            <!-- <li class="menu-item menu-item-parent" aria-haspopup="true">
+              <span class="menu-link">
+                <span class="menu-text">User Management</span>
+              </span>
+            </li> -->
+
+            <!-- begin::2 Level -->
+            <li
+              class="menu-item"
+              routerLinkActive="menu-item-active"
+              aria-haspopup="true"
+              data-menu-toggle="hover"
+            >
+              <a
+                class="menu-link"
+                routerLink="/users"
+                routerLinkActive="active"
+              >
+                <i class="menu-bullet menu-bullet-dot">
+                  <span></span>
+                </i>
+                <span class="menu-text">Payment</span>
+              </a>
+            </li>
+            <!-- end::2 Level -->
+          </ul>
+        </div>
+      </li>
       <!-- end::1 Level -->
 
       <!-- Custom -->
