--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -1453,7 +1453,7 @@
         <a
           class="menu-link menu-toggle"
           routerLinkActive="active"
-          href="/users"
+          href="/payments"
         >
           <span
             [inlineSVG]="'./assets/media/svg/icons/General/User.svg'"
@@ -1481,7 +1481,7 @@
             >
               <a
                 class="menu-link"
-                routerLink="/users"
+                routerLink="/payments"
                 routerLinkActive="active"
               >
                 <i class="menu-bullet menu-bullet-dot">
