--- a/src/app/modules/payments/components/new-payment/new-payment.component.html
+++ b/src/app/modules/payments/components/new-payment/new-payment.component.html
@@ -16,7 +16,7 @@
     <div class="card-title">
       <h3 class="card-label">
         <ng-container>
-           New product
+           BENEFICIARIO
       <!--    <span *ngIf="product && product.id"
             >'{{ product.manufacture }} {{ product.model }} -
             {{ product.modelYear }}'</span
@@ -29,221 +29,86 @@
     </div>
   </div>
   <div class="card-body">
-    <ul class="nav nav-tabs nav-tabs-line" role="tablist">
-      <li class="nav-item cursor-pointer" (click)="changeTab(tabs.BASIC_TAB)">
-        <a
-          class="nav-link"
-          data-toggle="tab"
-          role="tab"
-          [attr.aria-selected]="activeTabId === tabs.BASIC_TAB"
-          [class.active]="activeTabId === tabs.BASIC_TAB"
-        >
-          Basic info
-        </a>
-      </li>
-      <li
-        class="nav-item cursor-pointer"
-        (click)="changeTab(tabs.REMARKS_TAB)"
-      >
-        <a
-          class="nav-link"
-          data-toggle="tab"
-          role="button"
-          [attr.aria-selected]="activeTabId === tabs.REMARKS_TAB"
-          [class.active]="activeTabId === tabs.REMARKS_TAB"
-          >Product remarks</a
-        >
-      </li>
-      <li
-        class="nav-item cursor-pointer"
-        (click)="changeTab(tabs.SPECIFICATIONS_TAB)"
-      >
-        <a
-          class="nav-link"
-          data-toggle="tab"
-          role="tab"
-          [attr.aria-selected]="activeTabId === tabs.SPECIFICATIONS_TAB"
-          [class.active]="activeTabId === tabs.SPECIFICATIONS_TAB"
-          >Product specifications</a
-        >
-      </li>
-    </ul>
-
     <ng-container >
       <div class="mt-5">
-        <form
-          action="#"
-          class="form form-label-right"
-          [formGroup]="formGroup"
-          (ngSubmit)="save()"
-        >
+        <form action="#" class="form form-label-right" [formGroup]="formGroup" (ngSubmit)="save()">
           <div class="form-group row">
             <div class="col-lg-4">
-              <label>Enter Model</label>
-              <input
-                type="text"
-                class="form-control form-control-lg form-control-solid"
-                autocomplete="off"
-                placeholder="Model"
-                name="model"
-                [class.is-invalid]="isControlInvalid('model')"
-                [class.is-valid]="isControlValid('model')"
-                formControlName="model"
-              />
+              <label>Codigo Beneficiario</label>
+              <input type="text" class="form-control form-control-lg form-control-solid" autocomplete="off"
+                placeholder="Codigo Beneficiario" name="beneficiary_code" [class.is-invalid]="isControlInvalid('model')"
+                [class.is-valid]="isControlValid('model')" formControlName="model"/>
               <div class="feedback" *ngIf="!isControlTouched('model')">
                 Please enter <b>Model</b>
               </div>
               <div class="valid-feedback" *ngIf="isControlValid('model')">
                 Model was entered correct
               </div>
-              <div
-                class="invalid-feedback"
-                *ngIf="controlHasError('required', 'model')"
-              >
+              <div class="invalid-feedback" *ngIf="controlHasError('required', 'model')">
                 Model is required
               </div>
-              <div
-                class="invalid-feedback"
-                *ngIf="controlHasError('minlength', 'model')"
-              >
+              <div class="invalid-feedback" *ngIf="controlHasError('minlength', 'model')">
                 Model should have at least 3 symbols
               </div>
-              <div
-                class="invalid-feedback"
-                *ngIf="controlHasError('maxLength', 'model')"
-              >
+              <div class="invalid-feedback" *ngIf="controlHasError('maxLength', 'model')">
                 Model should have maximum 100 symbols
               </div>
             </div>
+   
             <div class="col-lg-4">
-              <label>Select Manufacture</label>
-              <select
-                class="form-control form-control-lg form-control-solid"
-                name="manufacture"
-                formControlName="manufacture"
-              >
-                <option value="Pontiac">Pontiac</option>
-                <option value="Kia">Kia</option>
-                <option value="Lotus">Lotus</option>
-                <option value="Subaru">Subaru</option>
-                <option value="Jeep">Jeep</option>
-                <option value="Isuzu">Isuzu</option>
-                <option value="Mitsubishi">Mitsubishi</option>
-                <option value="Oldsmobile">Oldsmobile</option>
-                <option value="Chevrolet">Chevrolet</option>
-                <option value="Chrysler">Chrysler</option>
-                <option value="Audi">Audi</option>
-                <option value="Suzuki">Suzuki</option>
-                <option value="GMC">GMC</option>
-                <option value="Cadillac">Cadillac</option>
-                <option value="Infinity">Infinity</option>
-                <option value="Mercury">Mercury</option>
-                <option value="Dodge">Dodge</option>
-                <option value="Ram">Ram</option>
-                <option value="Lexus">Lexus</option>
-                <option value="Lamborghini">Lamborghini</option>
-                <option value="Honda">Honda</option>
-                <option value="Nissan">Nissan</option>
-                <option value="Ford">Ford</option>
-                <option value="Hyundai">Hyundai</option>
-                <option value="Saab">Saab</option>
-                <option value="Toyota">Toyota</option>
-              </select>
-              <div class="feedback">Please select <b>Color</b></div>
-            </div>
-            <div class="col-lg-4">
-              <label>Enter Model year</label>
-              <input
-                type="number"
-                class="form-control form-control-lg form-control-solid"
-                placeholder="Model Year"
-                name="modelYear"
-                [class.is-invalid]="isControlInvalid('modelYear')"
-                [class.is-valid]="isControlValid('modelYear')"
-                formControlName="modelYear"
-              />
+              <label>Dni</label>
+              <input type="text" class="form-control form-control-lg form-control-solid"
+                placeholder="Dni Beneficiario" name="beneficiary_dni" [class.is-invalid]="isControlInvalid('modelYear')"
+                [class.is-valid]="isControlValid('modelYear')" formControlName="modelYear"/>
               <div class="feedback" *ngIf="!isControlTouched('modelYear')">
                 Please enter <b>Model</b>
               </div>
               <div class="valid-feedback" *ngIf="isControlValid('modelYear')">
                 Model year was entered correct
               </div>
-              <div
-                class="invalid-feedback"
-                *ngIf="controlHasError('required', 'modelYear')"
-              >
+              <div class="invalid-feedback" *ngIf="controlHasError('required', 'modelYear')">
                 Model year is required
               </div>
-              <div
-                class="invalid-feedback"
-                *ngIf="controlHasError('minlength', 'modelYear')"
-              >
+              <div class="invalid-feedback" *ngIf="controlHasError('minlength', 'modelYear')">
                 Model year should have at least 3 symbols
               </div>
-              <div
-                class="invalid-feedback"
-                *ngIf="controlHasError('min', 'modelYear')"
-              >
+              <div class="invalid-feedback" *ngIf="controlHasError('min', 'modelYear')">
                 Model year can't be less than 1900
               </div>
-              <div
-                class="invalid-feedback"
-                *ngIf="controlHasError('max', 'modelYear')"
-              >
+              <div class="invalid-feedback" *ngIf="controlHasError('max', 'modelYear')">
                 Model year can't be more than 2023
               </div>
-              <div
-                class="invalid-feedback"
-                *ngIf="controlHasError('maxLength', 'modelYear')"
-              >
+              <div class="invalid-feedback" *ngIf="controlHasError('maxLength', 'modelYear')">
                 Model year should have maximum 100 symbols
               </div>
             </div>
           </div>
+
           <div class="form-group row">
             <div class="col-lg-4">
               <label>Enter Mileage</label>
-              <input
-                type="number"
-                class="form-control form-control-lg form-control-solid"
-                placeholder="Mileage"
-                name="mileage"
-                [class.is-invalid]="isControlInvalid('mileage')"
-                [class.is-valid]="isControlValid('mileage')"
-                formControlName="mileage"
-              />
+              <input type="number" class="form-control form-control-lg form-control-solid"
+                placeholder="Mileage" name="mileage"[class.is-invalid]="isControlInvalid('mileage')"
+                [class.is-valid]="isControlValid('mileage')" formControlName="mileage"/>
               <div class="feedback" *ngIf="!isControlTouched('mileage')">
                 Please enter <b>Mileage</b>
               </div>
               <div class="valid-feedback" *ngIf="isControlValid('mileage')">
                 Mileage was entered correct
               </div>
-              <div
-                class="invalid-feedback"
-                *ngIf="controlHasError('required', 'mileage')"
-              >
+              <div class="invalid-feedback" *ngIf="controlHasError('required', 'mileage')">
                 Mileage is required
               </div>
-              <div
-                class="invalid-feedback"
-                *ngIf="controlHasError('minlength', 'mileage')"
-              >
+              <div class="invalid-feedback" *ngIf="controlHasError('minlength', 'mileage')">
                 Mileage should have at least 1 symbol
               </div>
-              <div
-                class="invalid-feedback"
-                *ngIf="controlHasError('maxLength', 'mileage')"
-              >
+              <div class="invalid-feedback" *ngIf="controlHasError('maxLength', 'mileage')">
                 Mileage year should have maximum 100 symbols
               </div>
             </div>
             <div class="col-lg-4">
               <label>Select Color</label>
-              <select
-                class="form-control form-control-lg form-control-solid"
-                name="color"
-                formControlName="color"
-              >
+              <select class="form-control form-control-lg form-control-solid" name="color" formControlName="color">
                 <option value="Red">Red</option>
                 <option value="CadetBlue">CadetBlue</option>
                 <option value="Eagle">Eagle</option>
