--- a/src/app/modules/users/components/list-user/list-user.component.html
+++ b/src/app/modules/users/components/list-user/list-user.component.html
@@ -1,10 +1,10 @@
 <div class="card card-custom gutter-b">
   <div class="card-header">
     <div class="card-title">
-      <h3 class="card-label">Customers list</h3>
+      <h3 class="card-label">Lista de usuarios</h3>
     </div>
     <div class="card-toolbar">
-      <button type="button" class="btn btn-primary" (click)="create()">New Customer</button>
+      <button type="button" class="btn btn-primary" (click)="create()">Nuevo usuario</button>
     </div>
   </div>
   <div class="card-body">
@@ -15,11 +15,12 @@
           <div class="row" [formGroup]="filterGroup">
             <div class="col-lg-6">
               <select class="form-control" name="status" placeholder="Filter by Status" formControlName="status">
-                <option value="">All</option>
-                <option value="1">Susspended</option>
-                <option value="2">Active</option>
-                <option value="3">Pending</option>
-              </select><small class="form-text text-muted"><b>Filter</b> by Status</small>
+                <option value="">Todos</option>
+                <option value="1">Persona Juridica</option>
+                <option value="2">Persona Natural</option>
+                <option value="3">Sujeto No Domiciliario</option>
+                <option value="4">Adquiriente - Ticket</option>
+              </select><small class="form-text text-muted"><b>Filtro</b> por Persona</small>
             </div>
             <div class="col-lg-6">
               <select class="form-control" placeholder="Filter by Type" name="type" formControlName="type">
@@ -32,7 +33,7 @@
         </div>
         <div class="col-lg-2" [formGroup]="searchGroup">
           <input type="text" class="form-control" name="searchText" placeholder="Search" value=""
-            formControlName="searchTerm" /><small class="form-text text-muted"><b>Search</b> in all fields</small>
+            formControlName="searchTerm" /><small class="form-text text-muted"><b>Buscar</b> en todos los campos</small>
         </div>
       </div>
     </div>
@@ -83,12 +84,12 @@
               (sort)="sort($event)"></app-sort-icon>
           </th>
           <th>
-            FIRSTNAME
+            PRIMER NOMBRE
             <app-sort-icon column="firstName" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
               (sort)="sort($event)"></app-sort-icon>
           </th>
           <th>
-            LASTNAME
+            PRIMER APELLIDO
             <app-sort-icon column="lastName" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
               (sort)="sort($event)"></app-sort-icon>
           </th>
@@ -98,21 +99,21 @@
               (sort)="sort($event)"></app-sort-icon>
           </th>
           <th>
-            GENDER
+            GENERO
             <app-sort-icon column="gender" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
               (sort)="sort($event)"></app-sort-icon>
           </th>
           <th>
-            STATUS
+            ESTATUS
             <app-sort-icon column="status" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
               (sort)="sort($event)"></app-sort-icon>
           </th>
           <th>
-            TYPE
+            TIPO
             <app-sort-icon column="type" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
               (sort)="sort($event)"></app-sort-icon>
           </th>
-          <th>ACTIONS</th>
+          <th>ACCIONES</th>
         </thead>
         <tbody>
           <tr >
