--- a/src/app/modules/payments/components/ticket-payments/ticket-payments.component.html
+++ b/src/app/modules/payments/components/ticket-payments/ticket-payments.component.html
@@ -22,7 +22,7 @@
               href="#"
               class="text-dark-75 font-weight-bold text-hover-primary font-size-lg mb-1"
             >
-              Daily Standup Meeting niel h
+              Daily Standup Meeting niel huamaman cerva
             </a>
             <!--end::Title-->
 
